fix mapsurfer link

--- a/map.html
+++ b/map.html
@@ -30,7 +30,7 @@
 
     <script type="text/javascript">
 
-        L.tileLayer('http://openmapsurfer.uni-hd.de/tiles/roads/x={x}&y={y}&z={z}', {
+        L.tileLayer('http://korona.geog.uni-heidelberg.de/tiles/roads/x={x}&y={y}&z={z}', {
             attribution: 'Map data &copy; <a href="http://www.openstreetmap.org">OpenStreetMap</a> contributors,\
                           Animal records &copy; <a href="http://wwf.ru">WWF</a>,\
                           Rendering <a href="http://www.geog.uni-heidelberg.de">GIScience Research Group @ Heidelberg University</a>'
